result/subtask05-casting/testcase02.out
/home/share/hw2/input/subtask05-casting/testcase02.cpp:1:21: error:  syntax error
     1 |int main(string argv[ )
       |                    ^
Total lines: 1
